@@ -1,3 +1,8 @@
+2008-11-27  Juanma Barranquero  <lekktu@gmail.com>
+
+	* w32font.c (add_font_entity_to_list): Pass the right LOGFONT
+	pointer to check_face_name.
+
 2008-11-27  Kenichi Handa  <handa@m17n.org>
 
 	* category.h (SET_CATEGORY_SET): Call set_category_set.
